# timesheet

./: .gitignore  Cargo.toml  timesheet.db
src/: barcode.rs  db.rs  event_handlers.rs  lib.rs  main.rs  main.slint  reports.rs  timers.rs  types.rs  ui_setup.rs  utils.rs  worker_display.rs
