[package]
name = "timesheet"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.31"
slint = { version = "1.13" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.13"
